# MinDashboard-Alpha

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc
src/config/: apis.h  config.json
src/core/dao/: dataprovider.cpp  dataprovider.h  networkprovider.cpp  networkprovider.h  serialprovider.cpp  serialprovider.h
src/core/helper/: framparser.cpp  framparser.h
src/core/log/: logger.cpp  logger.h  logworker.cpp  logworker.h
src/core/man/: datamanager.cpp  datamanager.h  gateway.cpp  gateway.h
src/core/middle/: StructType.h
src/core/middle/datarecorder/: datarecorder.cpp  datarecorder.h
src/core/middle/model/: datamodel.cpp  datamodel.h
src/core/middle/readproject/: readprojectconfig.cpp  readprojectconfig.h
src/core/middle/signals/: datasignals.cpp  datasignals.h
src/ui/qml/: AppDialog.qml  LogPage.qml  NavBar.qml  RobotArmPrimitive.qml  SettingsPage.qml  ToggleSwitch.qml
src/ui/qml/gauges/: CircularGauge.qml
src/ui/uicom/: arcgaugewidget.cpp  arcgaugewidget.h  cardwidget.cpp  cardwidget.h  gaugewidget.cpp  gaugewidget.h  realtimeareachartwidget.cpp  realtimeareachartwidget.h  statusindicatorwidget.cpp  statusindicatorwidget.h
src/ui/uicomNew/: modbusbackend.cpp  modbusbackend.h  navbar.cpp  navbar.h  treefilterproxymodel.cpp  treefilterproxymodel.h  treenavwidget.cpp  treenavwidget.h  ui.qss
src/ui/uicomqml/: CMakeLists.txt  main.cpp
src/ui/uicomqml/qml/: Main.qml
src/ui/uicomqml/qml/core/: AppContext.qml  AppTheme.qml
src/ui/uicomqml/qml/pages/: DashboardPage.qml  LogViewerPage.qml  SettingsPage.qml
src/ui/uicomqml/qml/ui/: AppButton.qml  AppCard.qml  AppDialog.qml  AppInput.qml  NavBar.qml  Notification.qml  Router.qml
src/ui/uimain/: dashboardpage.cpp  dashboardpage.h  logpage.cpp  logpage.h  robotarmpage.cpp  robotarmpage.h  settingpage.cpp  settingpage.h
